# gamedev

./: .gitignore
projects/pong/: CMakeLists.txt  build.sh  run.sh
projects/pong/include/: AIController.hpp  Ball.hpp  Game.h  Game.hpp  InputController.hpp  Paddel.h  Paddle.hpp  PlayerController.hpp
projects/pong/src/: AIController.cpp  Game.cpp  Paddle.cpp  PlayerController.cpp  main.cpp
